--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,7 @@
 <h1>Profile</h1>
 <h2>User data:</h2>
 {{#if user}}
- <h3>User Name: {{user.name}}</h3>
+ <h3> {{ capital user.name}}</h3>
 {{/if}}
 <a href="/user/logout">Logout</a>
 
