--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -2,6 +2,10 @@
     <h1>Create a new Account</h1>
     <form action="/user/signup" method="POST">
     <div class="form-group">
+        <label>Name:</label>
+        <input type="text" class="form-control" name="name">
+    </div>
+    <div class="form-group">
         <label>Email Address:</label>
         <input type="text" class="form-control" name="email">
     </div>
@@ -10,7 +14,7 @@
         <input type="password" class="form-control" name="password">
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Sign Up</button>
     </div>
     </form>
 </div>
