--- a/views/fileForm.hbs
+++ b/views/fileForm.hbs
@@ -1,6 +1,6 @@
 <h1>Please register yourself</h1>
 
-<form action="/upload/file" method="POST" enctype="multipart/form-data">
+<form action="/uploads/file" method="POST" enctype="multipart/form-data">
   <label>Upload a Picture</label>
   <input type="file" name="profile_pic">
   <br>
