--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,4 +1,5 @@
 <h2>User data:</h2>
+<img src="/uploads/images/{{picture.filename}} " alt="">
 {{#if user}}
  <h3>User Name:
      {{capital user.name}}  
