--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -21,6 +21,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="/css/main.css">
     <style>
       div.preview-images > img {
         width: 30%;
